--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <!--
@@ -17,17 +18,19 @@
         Es un onePage donde los botones de navegación conducen a distintas secciones de la landing.
     -->
     <header>
-        <img src="./resources/placeholder.png" id="logo">
+        <a href="#hero-section">
+            <img src="./resources/logo.png" id="logo">
+        </a>
         <nav>
             <ul>
                 <li>
-                    <a>Sobre Nosotros</a>
+                    <a href="#about-us-section">Sobre Nosotros</a>
                 </li>
                 <li>
-                    <a>Cómo funciona</a>
+                    <a href="#how-it-works-section">Cómo funciona</a>
                 </li>
                 <li>
-                    <a>Contacto</a>
+                    <a href="#contact-section">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -35,6 +38,8 @@
     <main>
         <section class="section" id="hero-section">
             <div class="max-width-container multi-column-layout">
+                <div class="glower"></div>
+                <div class="glower"></div>
                 <div>
                     <h1>Todas tus analíticas en un solo lugar</h1>
                     <p>
@@ -42,7 +47,7 @@
                     </p>
                     <button>¡Comienza Hoy!</button>
                 </div>
-                <img src="./resources/placeholder.png" class="one-side-img">
+                <img src="./resources/hero-image.png" class="one-side-img">
             </div>
         </section>
 
@@ -55,7 +60,7 @@
                 </p>
                 <div class="multi-column-layout">
                     <div class="team-member-card">
-                        <img src="./resources/placeholder.png">
+                        <img src="./resources/avatar-1.jpg">
                         <h3>Nombre del profesional</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
@@ -63,7 +68,7 @@
                         </p>
                     </div>
                     <div class="team-member-card">
-                        <img src="./resources/placeholder.png">
+                        <img src="./resources/avatar-2.jpg">
                         <h3>Nombre del profesional</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
@@ -71,7 +76,7 @@
                         </p>
                     </div>
                     <div class="team-member-card">
-                        <img src="./resources/placeholder.png">
+                        <img src="./resources/avatar-3.jpg">
                         <h3>Nombre del profesional</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
@@ -109,18 +114,29 @@
                 <h2>¿Tienes dudas? Es normal</h2>
                 <p>Hablemos hoy mismo para resolverlas y da el primer paso en el uso efectivo de tus datos</p>
                 <div class="multi-column-layout">
-                    <img src="./resources/placeholder.png">
+                    <img src="./resources/call-to-action-image.jpg">
                     <form>
-                        <label for="nombre">Nombre</label>
-                        <input type="text" name="nombre" placeholder="Nombre">
-                        <label for="email">Correo</label>
-                        <input type="email" name="email" placeholder="Correo">
-                        <input type="submit" value="Enviar">
-                    </form>
+                        <div class="mb-3">
+                          <label for="exampleInputEmail1" class="form-label">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                          <label for="exampleInputPassword1" class="form-label">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
                 </div>
             </div>
         </section>
 
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
