test de entrenamiento sin cambios importantes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Este proyecto simula una landing page para un producto ficticio, 
         en este caso una especie de administrador de analytics (tipo google tag manager).
 
-        Es un onePage donde los botones de navegación conducen a distintas secciones de la landing.
+        Es un onePage donde los botones de navegación conducen a distintas secciones de la landing
     -->
     <header>
         <a href="#hero-section">
