--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </header>
     <main>
         <section class="section" id="hero-section">
+            <div class="glower"></div>
+            <div class="glower"></div>
             <div class="max-width-container multi-column-layout">
-                <div class="glower"></div>
-                <div class="glower"></div>
                 <div>
                     <h1>Todas tus analíticas en un solo lugar</h1>
                     <p>
@@ -88,6 +88,8 @@
         </section>
 
         <section class="section" id="how-it-works-section">
+            <div class="glower"></div>
+            <div class="glower"></div>
             <div class="max-width-container">
                 <h2>¿Cómo funciona?</h2>
                 <p>En solo 3 pasos tomas el control de lo que pasa en tu negocio</p>
@@ -117,17 +119,13 @@
                     <img src="./resources/call-to-action-image.jpg">
                     <form>
                         <div class="mb-3">
+                            <label for="name" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email address</label>
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3 form-check">
-                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                       </form>
