--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <a href="#hero-section">
             <img src="./resources/logo.png" id="logo">
         </a>
-        <nav>
+        <img id="menu-icon" src="./resources/menu-icon.png">
+        <nav id="nav-menu">
             <ul>
                 <li>
                     <a href="#about-us-section">Sobre Nosotros</a>
@@ -61,26 +62,26 @@
                 <div class="multi-column-layout">
                     <div class="team-member-card">
                         <img src="./resources/avatar-1.jpg">
-                        <h3>Nombre del profesional</h3>
+                        <h3>María Rodríguez</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
-                            arcu tellus. Feugiat bibendum ac id dolor consequat at. Nisl aliquet quis urna.
+                            María es una apasionada del análisis de datos y tiene una amplia experiencia en la interpretación 
+                            de métricas y tendencias. Su habilidad para transformar datos en insights valiosos es invaluable para nuestro equipo.
                         </p>
                     </div>
                     <div class="team-member-card">
                         <img src="./resources/avatar-2.jpg">
-                        <h3>Nombre del profesional</h3>
+                        <h3>Elena Martínez</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
-                            arcu tellus. Feugiat bibendum ac id dolor consequat at. Nisl aliquet quis urna.
+                            Elena se destaca en la implementación y gestión de etiquetas maestras. Su atención meticulosa a los detalles 
+                            garantiza que cada etiqueta se configure de manera precisa y eficiente, lo que mejora la precisión de nuestras analíticas.
                         </p>
                     </div>
                     <div class="team-member-card">
                         <img src="./resources/avatar-3.jpg">
-                        <h3>Nombre del profesional</h3>
+                        <h3>Sofía López</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur. Pulvinar nibh tellus ipsum massa fringilla 
-                            arcu tellus. Feugiat bibendum ac id dolor consequat at. Nisl aliquet quis urna.
+                            Sofía es una diseñadora de UX talentosa que se asegura de que nuestra plataforma sea intuitiva y atractiva para los usuarios. 
+                            Sus habilidades en diseño garantizan una experiencia de usuario excepcional en cada interacción.
                         </p>
                     </div>
                 </div>
@@ -125,9 +126,9 @@
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email address</label>
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                          <div id="emailHelp" class="form-text">Tu email es privado y no lo compartimos</div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Hablemos</button>
                       </form>
                 </div>
             </div>
@@ -135,6 +136,7 @@
 
     </main>
 
+    <script src="./responsive-header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
