--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                 </p>
                 <div class="multi-column-layout">
                     <div class="team-member-card">
-                        <img src="./resources/avatar-1.jpg">
+                        <div class="avatar-container">
+                            <img src="./resources/avatar-1.jpg">
+                            <div class="circle"></div>
+                        </div>
                         <h3>María Rodríguez</h3>
                         <p>
                             María es una apasionada del análisis de datos y tiene una amplia experiencia en la interpretación 
@@ -69,7 +72,10 @@
                         </p>
                     </div>
                     <div class="team-member-card">
-                        <img src="./resources/avatar-2.jpg">
+                        <div class="avatar-container">
+                            <img src="./resources/avatar-2.jpg">
+                            <div class="circle"></div>
+                        </div>
                         <h3>Elena Martínez</h3>
                         <p>
                             Elena se destaca en la implementación y gestión de etiquetas maestras. Su atención meticulosa a los detalles 
@@ -77,7 +83,10 @@
                         </p>
                     </div>
                     <div class="team-member-card">
-                        <img src="./resources/avatar-3.jpg">
+                        <div class="avatar-container">
+                            <img src="./resources/avatar-3.jpg">
+                            <div class="circle"></div>
+                        </div>
                         <h3>Sofía López</h3>
                         <p>
                             Sofía es una diseñadora de UX talentosa que se asegura de que nuestra plataforma sea intuitiva y atractiva para los usuarios. 
