'!important' remove from css

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="glower"></div>
             <div class="max-width-container multi-column-layout">
                 <div>
-                    <h1>Todas tus analíticas en un solo lugar</h1>
+                    <h1 class="title-text">Todas tus analíticas en un solo lugar</h1>
                     <p>
                         Recolecta todas las métricas con una etiqueta maestra, analiza tus datos y toma decisiones certeras
                     </p>
-                    <button>¡Comienza Hoy!</button>
+                    <button class="primary-button">¡Comienza Hoy!</button>
                 </div>
                 <img src="./resources/hero-image.png" class="one-side-img">
             </div>
@@ -54,7 +54,7 @@
 
         <section class="section" id="about-us-section"> 
             <div class="max-width-container">
-                <h2>Somos apasionados y soñadores</h2>
+                <h2 class="title-text-2">Somos apasionados y soñadores</h2>
                 <p>
                     Nuestro grupo de especialistas formados en Data Management adoran diseñar nuevas funcionalidades y 
                     trabajar para que este sea un producto único
@@ -65,7 +65,7 @@
                             <img src="./resources/avatar-1.jpg">
                             <div class="circle"></div>
                         </div>
-                        <h3>María Rodríguez</h3>
+                        <h3 class="title-text-3">María Rodríguez</h3>
                         <p>
                             María es una apasionada del análisis de datos y tiene una amplia experiencia en la interpretación 
                             de métricas y tendencias. Su habilidad para transformar datos en insights valiosos es invaluable para nuestro equipo.
@@ -76,7 +76,7 @@
                             <img src="./resources/avatar-2.jpg">
                             <div class="circle"></div>
                         </div>
-                        <h3>Elena Martínez</h3>
+                        <h3 class="title-text-3">Elena Martínez</h3>
                         <p>
                             Elena se destaca en la implementación y gestión de etiquetas maestras. Su atención meticulosa a los detalles 
                             garantiza que cada etiqueta se configure de manera precisa y eficiente, lo que mejora la precisión de nuestras analíticas.
@@ -87,7 +87,7 @@
                             <img src="./resources/avatar-3.jpg">
                             <div class="circle"></div>
                         </div>
-                        <h3>Sofía López</h3>
+                        <h3 class="title-text-3">Sofía López</h3>
                         <p>
                             Sofía es una diseñadora de UX talentosa que se asegura de que nuestra plataforma sea intuitiva y atractiva para los usuarios. 
                             Sus habilidades en diseño garantizan una experiencia de usuario excepcional en cada interacción.
@@ -101,7 +101,7 @@
             <div class="glower"></div>
             <div class="glower"></div>
             <div class="max-width-container">
-                <h2>¿Cómo funciona?</h2>
+                <h2 class="title-text-2">¿Cómo funciona?</h2>
                 <p>En solo 3 pasos tomas el control de lo que pasa en tu negocio</p>
                 <div class="multi-column-layout">
                     <div class="step-card">
@@ -117,13 +117,13 @@
                         <p>¡Ya estás recibiendo datos!</p>
                     </div>
                 </div>
-                <button>¡Comienza Hoy!</button>
+                <button class="primary-button">¡Comienza Hoy!</button>
             </div>
         </section>
 
         <section class="section" id="contact-section">
             <div class="max-width-container">
-                <h2>¿Tienes dudas? Es normal</h2>
+                <h2 class="title-text-2">¿Tienes dudas? Es normal</h2>
                 <p>Hablemos hoy mismo para resolverlas y da el primer paso en el uso efectivo de tus datos</p>
                 <div class="multi-column-layout">
                     <img src="./resources/call-to-action-image.jpg">
@@ -137,7 +137,7 @@
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                           <div id="emailHelp" class="form-text">Tu email es privado y no lo compartimos</div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Hablemos</button>
+                        <button type="submit" class="primary-button">Hablemos</button>
                       </form>
                 </div>
             </div>
