--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                 <button class="primary-button">¡Comienza Hoy!</button>
             </div>
         </section>
-
+    </main>
+    <footer>
         <section class="section" id="contact-section">
             <div class="max-width-container">
                 <h2 class="title-text-2">¿Tienes dudas? Es normal</h2>
@@ -133,17 +134,16 @@
                             <input type="text" class="form-control" id="name">
                         </div>
                         <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text">Tu email es privado y no lo compartimos</div>
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">Tu email es privado y no lo compartimos</div>
                         </div>
                         <button type="submit" class="primary-button">Hablemos</button>
-                      </form>
+                    </form>
                 </div>
             </div>
         </section>
-
-    </main>
+    </footer>
 
     <script src="./responsive-header.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
